--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,8 @@ description:
   </p>
   
   <p align="justify">
-  I am passionate about leveraging technology and data to drive innovation. 
-  With 10 years of professional experience in Automation and NDT, I've had the privilege of wearing multiple hats, including Application Engineer, Product Manager, Project Engineer, and even Head of an Analytics and Diagnostics Center in a leading international company SKF.
+  10 years of professional experience in Automation and NDT in different roles such as Application Engineer, Product Manager, Project Engineer, and Head of an Analytics and Diagnostics Center in a leading international company SKF.
   <br><br>
-  My journey has taken me across the globe, working with diverse teams on cutting-edge projects that push the boundaries of technology. A problem-solver at heart, I thrive on challenges that demand creativity and expertise.
   In my quest for continuous growth, I embarked on a Data Science journey in the end of 2022. Learning is my passion, and I believe that data holds the key to unlocking new possibilities in every industry.
   <br><br>
   </p>
