--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/mikhailblakhin/">LinkedIn</a> |
+  <a href="https://www.t.me/mikhailblakhin/">Telegram</a> |
   <a href="https://github.com/dsintheocean">GitHub</a>
   </p>
   
